LIST OF CHANGES

release 86.10
 - the bug in paged run views where a particular instrument was selected
     is fixed
 - the frame height for displaying runs on an instrument page is increased
 - displayed instrument statuses in the instrument view are limited
     to most recent (created within a year from the current date)
 - npg_tracking::illumina::runfolder is simplified at a cost of losing
   ability to pass to the constructor an arbitrary path
 - npg_tracking::illumina::run::short_info role - added database
   look-up aided ability to deal with arbitrary run folder names
 - use icons from the latest set of brand images
 - display institute's logo and favicon only if pages are served
     from institute's servers
 - removed unnecessary aliasing of urls
 - deleted unused (dif_files_path and pb_cal_path) runfolder accessors
 - method to find file with globin genes inside transcriptome repo added
 - changes to support gbs_plex repository
 
release 86.9
 - to account for ephemeral staging areas on OpenStack, extend staging
   directory path match expression in Apache httpd config file
 - use bash shell when executing system calls from Perl
 - copied srpipe::runfolder module (from SVN data_handling package)
   as npg_tracking::illumina::runfolder to this package, removed tests
   that depended on test folder hierarchy in the data_handling package

release 86.8
 - remove redundant script for reporting sequencing failures to RT
 - remove uptime info from instrument page - function no longer available
 - correct handling of transition from 'down for service' to 'down for repair'

release 86.7
 - stop building on Travis under Perl 5.16,
   see https://rt.cpan.org/Public/Bug/Display.html?id=123310
 - reference find role: when parsing a genome reference string 
   return the analysis, along with the organism, strain
   and transcriptome version, if present
 - refactor transcriptome::find to improve code reuse and add