@@ -898,24 +898,27 @@ t/data/repos/npg/run/4140.xml
 t/data/repos/npg/run/4254.xml
 t/data/repos/npg/run/5175.xml
 t/data/repos/npg/run/6993.xml
-t/data/repos/references/Bordetella_bronchiseptica/RB50/all/bwa/ref.fa.amb
-t/data/repos/references/Bordetella_bronchiseptica/RB50/all/bwa/ref.fa.options
+t/data/repos/references/Bordetella_bronchiseptica/RB50/all/bwa0_6/ref.fa.amb
+t/data/repos/references/Bordetella_bronchiseptica/RB50/all/bwa0_6/ref.fa.options
 t/data/repos/references/Bordetella_bronchiseptica/RB50/all/fasta/ref.fa
 t/data/repos/references/Bordetella_bronchiseptica/RB50/all/RB50.fa
+t/data/repos/references/Clostridium_difficile/.gitignore
+t/data/repos/references/Human/fna_strain/all/bwa0_6/.gitignore
 t/data/repos/references/Human/fna_strain/all/fasta/someref.fna
-t/data/repos/references/Human/NCBI36/all/bwa/someref.fa.bwt
+t/data/repos/references/Human/NCBI36/all/bwa0_6/someref.fa.bwt
 t/data/repos/references/Human/NCBI36/all/fasta/someref.fa
+t/data/repos/references/Human/no_ref_strain/all/bwa0_6/.gitignore
 t/data/repos/references/Human/no_ref_strain/all/fasta/someref.fai
-t/data/repos/references/Human/strain1/all/bwa/strain1.fa.bwa
+t/data/repos/references/Human/strain1/all/bwa0_6/strain1.fa.bwa
 t/data/repos/references/Human/strain1/all/fasta/strain1.fa
 t/data/repos/references/PhiX/default/all/bowtie/phix-illumina.fa.1.ebwt
-t/data/repos/references/PhiX/default/all/bwa/phix-illumina.fa.bwt
+t/data/repos/references/PhiX/default/all/bwa0_6/phix-illumina.fa.bwt
 t/data/repos/references/PhiX/default/all/eland/phix-illumina.fa.2bpb
 t/data/repos/references/PhiX/default/all/fasta/phix-illumina.fa
-t/data/repos/references/Streptococcus_equi/default/all/bwa/S-equi-4047.fasta.bwt
+t/data/repos/references/Streptococcus_equi/default/all/bwa0_6/S-equi-4047.fasta.bwt
 t/data/repos/references/Streptococcus_equi/default/all/fasta/S-equi-4047.fasta
-t/data/repos/references/Streptococcus_pneumoniae/ATCC_700669/all/bwa/S_pneumoniae_700669.fasta
-t/data/repos/references/Streptococcus_pneumoniae/ATCC_700669/all/bwa/S_pneumoniae_700669.fasta.options
+t/data/repos/references/Streptococcus_pneumoniae/ATCC_700669/all/bwa0_6/S_pneumoniae_700669.fasta
+t/data/repos/references/Streptococcus_pneumoniae/ATCC_700669/all/bwa0_6/S_pneumoniae_700669.fasta.options
 t/data/repos/references/Streptococcus_pneumoniae/ATCC_700669/all/fasta/S_pneumoniae_700669.fasta
 t/data/repos/references/Streptococcus_pneumoniae/ATCC_700669/all/picard/S_pneumoniae_700669.fasta.dict
 t/data/repos/st/batches/14000.xml
@@ -969,10 +972,11 @@ t/data/repos1/population_snv/Homo_sapiens/default/Standard/1000Genomes_hs37d5/Hu
 t/data/repos1/references/Bordetella_pertussis/ST24/all/fasta/bpst24_May2010-1.fa
 t/data/repos1/references/Haemonchus_contortus/V1_21June13/all/fasta/haemonchus_V1.fa
 t/data/repos1/references/Homo_sapiens/1000Genomes/all/fasta/human_g1k_v37.fasta
+t/data/repos1/references/Homo_sapiens/1000Genomes_hs37d5/all/bwa0_6/.gitignore
 t/data/repos1/references/Homo_sapiens/1000Genomes_hs37d5/all/fasta/hs37d5.fa
 t/data/repos1/references/Homo_sapiens/CGP_GRCh37.NCBI.allchr_MT/all/fasta/Homo_sapiens.GRCh37.NCBI.allchr_MT.fa
 t/data/repos1/references/Homo_sapiens/GRCh37_53/all/fasta/Homo_sapiens.GRCh37.dna.all.fa
-t/data/repos1/references/Homo_sapiens/NCBI36/all/bwa/ncbi36.fa.amb
+t/data/repos1/references/Homo_sapiens/NCBI36/all/bwa0_6/ncbi36.fa.amb
 t/data/repos1/references/Homo_sapiens/NCBI36/all/fasta/ncbi36.fa
 t/data/repos1/references/Mus_musculus/GRCm38/all/fasta/Mus_musculus.GRCm38.68.dna.toplevel.fa
 t/data/repos1/references/Mus_musculus/NCBIm37/all/fasta/mm_ref_NCBI37_1.fasta
@@ -1725,10 +1729,6 @@ t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/D
 t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/Data/Intensities/L006/.gitignore
 t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/Data/Intensities/L007/.gitignore
 t/data/long_info/nfs/sf20/ILorHSany_sf20/incoming/100914_HS3_05281_A_205MBABXX/Data/Intensities/L008/.gitignore
-t/data/repos/references/Clostridium_difficile/.gitignore
-t/data/repos/references/Human/fna_strain/all/bwa/.gitignore
-t/data/repos/references/Human/no_ref_strain/all/bwa/.gitignore
-t/data/repos1/references/Homo_sapiens/1000Genomes_hs37d5/all/bwa/.gitignore
 t/data/repos2/references2/Homo_sapiens/GRCh37_53/.gitignore
 t/data/repos2/references2/Homo_sapiens/NCBI36/.gitignore
 t/data/repos2/references2/Human_herpesvirus_4/EB1/.gitignore
